using System;
using System.Collections.Generic;
using System.Linq;
using System.Threading.Tasks;

namespace WearHouse_WebApp.Models.Domain
{
    public class UserModel
    {

    }
}
